# flutterdocs_mcp

./: .pubignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
doc_gen/: DOCDB_SCHEMA.sql  PATHBUILDER_USAGE.md  convert.py  pyproject.toml
doc_gen/src/flutterdoc_gen/: __init__.py
doc_gen/src/flutterdoc_gen/_shared/: __init__.py  constants.py  logging.py  paths.py
doc_gen/src/flutterdoc_gen/convert/: __init__.py  __main__.py  categorization.py  cli.py  constants.py  conversion.py  errors.py  parsing.py  paths.py  patterns.py  processors.py  rootdocs.py  templates.py  transformations.py
doc_gen/src/flutterdoc_gen/load/: __init__.py  __main__.py  cli.py  db.py  loader.py
doc_gen/tests/: conftest.py
doc_gen/tests/convert/: conftest.py  test_integration.py  test_transformations.py
doc_gen/tests/convert/integration/: test_basic_conversion.py  test_cli.py  test_conversion_pipeline.py  test_entity_types.py  test_link_transformations.py  test_member_processing.py
doc_gen/tests/convert/unit/: test_categorization.py  test_conversion.py  test_parsing.py  test_paths.py  test_patterns.py  test_transformations.py
doc_gen/tests/load/integration/: test_basic_load.py  test_entity_types.py  test_member_loading.py
make_docs/: DOCDB_SCHEMA.sql  DOCDB_SCHEMA.txt  PATHBUILDER_USAGE.md  SECTIONS.txt  pyproject.toml
make_docs/src/flutterdocs/: __init__.py
make_docs/tests/: conftest.py
make_docs/tests/convert/: conftest.py
make_docs/tests/load/: conftest.py
make_docs/tests/unit/: test_paths.py  test_version.py
(+857 files in other folders)
