[project]
name = "doc-gen"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "html-to-markdown==2.19.1",
]

[project.scripts]
convert = "flutterdoc_gen.convert.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flutterdoc_gen"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "snakeviz>=2.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
