[project]
name = "flutterdocs"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "html-to-markdown==2.28.0",
]

[project.scripts]
convert = "flutterdocs.convert.cli:main"
load = "flutterdocs.load.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flutterdocs"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "snakeviz>=2.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
